--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,20 +1,24 @@
 <article class="index">
-
-  <div class="orbit" role="region" aria-label="Top Rated Products" data-orbit>
-    <ul class="orbit-container hero">
-      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-      <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-      <li class="orbit-slide is-active">
-        <h3 class="text-center">2: You can also throw some text in here!</h3>
-      </li>
-      <li class="orbit-slide">
-        <img class="orbit-image" src="" alt="Space">
-        <figcaption class="orbit-caption">A beyonce</figcaption>
-      </li>
-    </ul>
+  <div class="row hero">
+    <h3 class="small-4 columns" id="slogan">
+      Whatever your budget...<br /> We can break it.
+    </h3>
+    <div class="orbit small-6 columns top-photos" role="region" aria-label="Top Rated Products" data-orbit>
+      <ul class="orbit-container top-photos">
+        <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+        <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+        <li class="orbit-slide is-active">
+          <h3 class="text-center">2: You can also throw some text in here!</h3>
+        </li>
+        <li class="orbit-slide">
+          <img class="orbit-image" src="" alt="Space">
+          <figcaption class="orbit-caption">A beyonce</figcaption>
+        </li>
+      </ul>
+    </div>
   </div>
 
-  <div class = "row">
+  <div class = "row title">
     <h3 class="small-12 cloumns">Shop by Category</h3>
   </div>
   <ul class="row">
