fixed look of root page

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,19 +1,23 @@
 <article class="index">
   <div class="row hero">
-    <h3 class="small-4 columns" id="slogan">
-      Whatever your budget...<br /> We can break it.
+    <h3 class="orbit small-12 medium-6 columns" id="slogan">
+      Whatever your budget... We can break it.
     </h3>
-    <div class="orbit small-6 columns top-photos" role="region" aria-label="Top Rated Products" data-orbit>
+    <div class="orbit small-12 medium-6 columns top-photos" role="region" aria-label="Top Rated Products" data-orbit>
       <ul class="orbit-container top-photos">
         <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
         <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-        <li class="orbit-slide is-active">
-          <h3 class="text-center">2: You can also throw some text in here!</h3>
-        </li>
-        <li class="orbit-slide">
-          <img class="orbit-image" src="" alt="Space">
-          <figcaption class="orbit-caption">A beyonce</figcaption>
-        </li>
+
+        <% @top_products.each do |product| %>
+          <li class="orbit-slide">
+            <%= link_to(product_path(product.id)) do %>
+              <img class="image carousel" src="<%=product.photo_url%>" alt="Product Photo">
+              <figcaption class="product-caption">
+                <%= product.name %>
+              </figcaption>
+            <% end %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
@@ -23,7 +27,6 @@
   </div>
   <ul class="row">
   <% @categories.each do |category| %>
-      <!-- need to link to list of products with this category -->
     <li class="small-12 medium-6 large-4 columns grid-item">
       <div class="border">
       <%= link_to(category_products_path(category.id)) do %>
