--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,29 +104,42 @@ header h1.main-header {
   margin-right: 10px;
 }
 
-/*Footer*/
-footer li {
+.shop-by li {
   display: inline-block;
   font-size: 1.25em;
-  margin: 10px;
+  margin: 0 10px;
+  float: left;
+}
+
+.shop-by {
+  margin: 0;
+  padding: 0;
 }
 
 /*Adding Styling for the categories index page*/
 .hero {
-  height: 200px;
+  height: 275px;
   /*margin-top: 50px;*/
-  background-color: #DCD0C0;
 }
 
 .top-photos {
   height: 200px;
 }
 
+img.carousel {
+  height: 200px;
+}
+
+.carousel {
+  text-align: center;
+}
+
 #slogan {
-  margin-top: 20px;
+  margin-top: 0px;
+  padding: 50px 50px;
   font-family: 'Cormorant Garamond', serif;
   font-size: 3em;
-  background-color: inherit;
+  background-color: #DCD0C0;
   color: white;
 }
 
