--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,16 +5,16 @@
     </h3>
   </div>
 
-<ul class="row">
+  <ul class="row">
   <% @products.each do |product| %>
-    <div class="border">
-    <%= link_to(product_path(product.id)) do %>
-      <li class="small-12 medium-6 large-4 columns grid-item">
-        <%= product.name %> <br />
-        <img src="<%= product.photo_url %>" alt="product photo", class="index_photo" >
-      </li>
-    <% end %>
-    </div>
+    <li class="small-12 medium-6 large-4 columns grid-item">
+      <div class="border">
+        <%= link_to(products_path(product.id)) do %>
+          <%= product.name %> <br />
+          <img src="<%= product.photo_url %>" alt="product photo", class="index_photo" >
+      <% end %>
+      </div>
+    </li>
   <% end %>
-</ul>
+  </ul>
 </article>
