fixed product link and added review seeding stuff

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
   <% @products.each do |product| %>
     <li class="small-12 medium-6 large-4 columns grid-item">
       <div class="border">
-        <%= link_to(products_path(product.id)) do %>
+        <%= link_to(product_path(product.id)) do %>
           <%= product.name %> <br />
           <img src="<%= product.photo_url %>" alt="product photo", class="index_photo" >
       <% end %>
