--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -13,11 +13,11 @@
           <%= f.label :quantity, "Quantity" %>
           <%= f.select :quantity, options_for_select((1..item.product.stock), selected: item.quantity)  %>
           <%= f.submit "Update quantity"%>
-
         <% end %>
+
         <%= button_to "Remove from cart", order_item_path(item), method: :delete, data: {confirm: "Do you really want to remove this from your cart?"} %>
       </li>
     <% end %>
   <% end %>
 </ul>
-<%= link_to "Checkout", checkout_path %>
+<%= button_to "Checkout", checkout_path, method: :get %>
