Fixed carousel issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="small-5 columns shop-by">
+      <div class="small-12 large-6 columns shop-by">
         <ul>
             <li>
                 <%= link_to "shop by category", categories_path %>
@@ -36,7 +36,7 @@
             </li>
         </ul>
       </div>
-      <nav class="small-6 columns" id="nav-bar">
+      <nav class="small-12 large-6 columns" id="nav-bar">
         <% if current_user %>
         <ul class="header-login">
           <li>
