--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,53 @@
-<h1><%= @user.username %></h1>
+<article class="user">
 
-<p>
-  User Profile: <%= @user.profile %>
-</p>
-<%= link_to "Edit profile", edit_user_path(@user.id) %>
-<h3>My Products</h3>
+  <div class = "row title">
+    <h3 class="small-12 cloumns">
+      <%= @user.username %>
+    </h3>
+  </div>
 
-<ul>
-  <% @user.products.each do |product| %>
-  <li>
-    <%= link_to product.name, product_path(product.id) %> <%= link_to "Edit", edit_product_path(product.id) %>
-    <% if product.selling? %>
-    <%= link_to "Retire product", status_path(product.id), method: :patch %>
-    <% else %>
-    <%= link_to "Sell product", status_path(product.id), method: :patch %>
-    <% end %>
-
-  </li>
-  <% end %>
-</ul>
-<%= button_to "Add a product to your store", new_product_path, method: :get, class: "button" %>
-<%= button_to "Add a new category", new_category_path, method: :get, class: "button" %>
-
-
-<h3>My Purchases</h3>
-<% if @purchases.empty? %>
-<p>
-  No purchases yet.
-</p>
-<% else %>
-<ul>
-  <% @purchases.each do |purchase| %>
-  <li>
-    <%= purchase.created_at.strftime("%m/%d/%Y") %>: <%= purchase.products.length %> item(s) - $<%= purchase.total %>
-  </li>
-  <% end %>
-</ul>
-<% end %>
-
-
-<h3><%= link_to 'Manage My Sales Orders', user_orders_path(@user.id) %></h3>
+  <div class="row">
+    <div class="small-12 medium-4 columns">
+      <p>
+        User Profile: <%= @user.profile %>
+      </p>
+      <%= link_to "Edit profile", edit_user_path(@user.id) %>
+      <%= link_to 'Manage My Sales Orders', user_orders_path(@user.id) %>
+    </div>
+    <div class="small-12 medium-4 columns">
+      <h4>My Products</h4>
+      <ul>
+        <% @user.products.each do |product| %>
+        <li>
+          <%= link_to product.name, product_path(product.id) %>
+          <%= link_to "Edit", edit_product_path(product.id) %>
+          <% if product.selling? %>
+          <%= link_to "Retire product", status_path(product.id), method: :patch %>
+          <% else %>
+          <%= link_to "Sell product", status_path(product.id), method: :patch %>
+          <% end %>
+        </li>
+        <% end %>
+      </ul>
+      <%= button_to "Add a product to your store", new_product_path, method: :get, class: "button" %>
+      <%= button_to "Add a new category", new_category_path, method: :get, class: "button" %>
+      <%= button_to 'Manage My Sales Orders', user_orders_path(@user.id), method: :get, class: "button" %>
+    </div>
+    <div class="small-12 medium-4 columns">
+      <h4>My Purchases</h4>
+      <% if @purchases.empty? %>
+      <p>
+        No purchases yet.
+      </p>
+      <% else %>
+      <ul>
+        <% @purchases.each do |purchase| %>
+        <li>
+          <%= purchase.created_at.strftime("%m/%d/%Y") %>: <%= purchase.products.length %> item(s) - $<%= purchase.total %>
+        </li>
+        <% end %>
+      </ul>
+      <% end %>
+    </div>
+  </div>
+</article>
