--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,44 +2,46 @@
 
 <%= render partial: "user" %>
 
-<h3>All orders</h3>
-<% if @user_orders == [] %>
-  <p>
-    No orders yet
-  </p>
-  <% else %>
-<ul>
-    <% @user_orders.each do |order| %>
-    <li>
-        <%= link_to "Order #{order.id}", order_path(order.id) %>
-        Date: <%= order.updated_at.strftime("%m/%d/%Y") %>
-        Status: <%= order.status %>
+  <div class="row">
+    <div class="small-12 medium-6">
+    <h3>All orders</h3>
+    <% if @user_orders == [] %>
+      <p>
+        No orders yet
+      </p>
+      <% else %>
         <ul>
-            <% order.order_items.each do |item| %>
-              <% if item.product.user_id == session[:user_id] %>
-              <li>
-                  <%= link_to item.product.name, product_path(item.product.id) %>
-                  <ul>
+          <% @user_orders.each do |order| %>
+            <li>
+              <%= link_to "Order #{order.id}", order_path(order.id) %>
+              Date: <%= order.updated_at.strftime("%m/%d/%Y") %>
+              Status: <%= order.status %>
+              <ul>
+                <% order.order_items.each do |item| %>
+                  <% if item.product.user_id == session[:user_id] %>
                     <li>
-                      <%= item.quantity %> @ <%= number_to_currency(item.product.price) %> each --
-                      Subtotal: <%= number_to_currency(item.subtotal) %>
+                      <%= link_to item.product.name, product_path(item.product.id) %>
+                        <ul>
+                          <li>
+                            <%= item.quantity %> @ <%= number_to_currency(item.product.price) %> each --
+                            Subtotal: <%= number_to_currency(item.subtotal) %>
+                          </li>
+                          <li>
+                            <%= form_for item, url: order_item_path(item), method: :patch do |f| %>
+                            <%= f.label :ship_status, "Shipping Status:" %>
+                            <%= f.select :ship_status, [['Shipped', true], ['Not shipped yet', false]] %>
+                            <%= f.submit %>
+                            <% end %>
+                          </li>
+                        </ul>
                     </li>
-
-                    <li>
-                      <%= form_for item, url: order_item_path(item), method: :patch do |f| %>
-                      <%= f.label :ship_status, "Shipping Status:" %>
-                      <%= f.select :ship_status, [['Shipped', true], ['Not shipped yet', false]] %>
-                      <%= f.submit %>
-                      <% end %>
-                    </li>
-                  </ul>
+                  <% end %>
                 <% end %>
-              <% end %>
+              </ul>
             </li>
+          <% end %>
         </ul>
-    </li>
-    <% end %>
-</ul>
-<% end %>
-
+      <% end %>
+    </div>
+  </div>
 </artilce>
