--- a/app/views/orders/incomplete.html.erb
+++ b/app/views/orders/incomplete.html.erb
@@ -17,7 +17,7 @@
           Status: <%= order.status %>
           <ul>
             <% order.order_items.each do |item| %>
-            <% if item.product.user_id == session[:user_id] %>
+            <% if item.product.user == current_user %>
             <li>
               <%= link_to item.product.name, product_path(item.product.id) %>
               <ul>
