added some cart styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,9 +68,11 @@
     <%= yield %>
   </main>
   <footer>
-    <p>
-      Copyright 2017 Jolly Owl
-    </p>
+    <div class="row">
+      <p class="small-12 column">
+        Copyright 2017 Jolly Owl
+      </p>
+    </div>
   </footer>
 </body>
 </html>
