--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,50 +1,54 @@
-<h1>Confirm Order Details</h1>
-<table>
-  <tr>
-    <th>Product Name</th>
-    <th>Price</th>
-    <th>Quantity</th>
-    <th>Subtotal</th>
-  </tr>
-  <% @order.order_items.each do |order_item| %>
-  <tr>
-    <td><%= order_item.product.name %></td>
-    <td><%= order_item.product.price %></td>
-    <td><%= order_item.quantity %></td>
-    <td><%= order_item.subtotal %></td>
-  </tr>
+<article class="checkout">
+
+  <h1>Confirm Order Details</h1>
+  <table>
+    <tr>
+      <th>Product Name</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Subtotal</th>
+    </tr>
+    <% @order.order_items.each do |order_item| %>
+    <tr>
+      <td><%= order_item.product.name %></td>
+      <td><%= order_item.product.price %></td>
+      <td><%= order_item.quantity %></td>
+      <td><%= order_item.subtotal %></td>
+    </tr>
+    <% end %>
+  </table>
+
+  <p>
+      <strong>Your Order Total is: $<%= @order.total %></strong>
+  </p>
+
+  <h2>Shipping Information</h2>
+  <p>
+    Please enter in all details to complete your order.
+  </p>
+
+  <%= form_for @order, url: confirmation_path(@order.id), method: :put do |f| %>
+
+    <%= f.label :email %>
+    <%= f.text_field :email, required: true %>
+
+    <%= f.label :name_on_cc %>
+    <%= f.text_field :name_on_cc, required: true %>
+
+    <%= f.label :cc_number %>
+    <%= f.text_field :cc_number, required: true %>
+
+    <%= f.label :cc_ccv %>
+    <%= f.text_field :cc_ccv, required: true %>
+
+    <%= f.label :billing_zip %>
+    <%= f.text_field :billing_zip, required: true %>
+
+    <%= f.label :address, "Shipping Address" %>
+    <%= f.text_area :address, required: true %>
+
+    <%= f.submit %>
+
   <% end %>
-</table>
 
-<p>
-    <strong>Your Order Total is: $<%= @order.total %></strong>
-</p>
-
-<h2>Shipping Information</h2>
-<p>
-  Please enter in all details to complete your order.
-</p>
-
-<%= form_for @order, url: confirmation_path(@order.id), method: :put do |f| %>
-
-  <%= f.label :email %>
-  <%= f.text_field :email, required: true %>
-
-  <%= f.label :name_on_cc %>
-  <%= f.text_field :name_on_cc, required: true %>
-
-  <%= f.label :cc_number %>
-  <%= f.text_field :cc_number, required: true %>
-
-  <%= f.label :cc_ccv %>
-  <%= f.text_field :cc_ccv, required: true %>
-
-  <%= f.label :billing_zip %>
-  <%= f.text_field :billing_zip, required: true %>
-
-  <%= f.label :address, "Shipping Address" %>
-  <%= f.text_area :address, required: true %>
-
-  <%= f.submit %>
-
-<% end %>
+</article>
