--- a/app/views/orders/update.html.erb
+++ b/app/views/orders/update.html.erb
@@ -1,36 +1,47 @@
-<h1>Confirmation</h1>
+<article class="update-order">
 
-<h2>Order Details</h2>
+  <div class="row title">
+    <h3 class="small-12 cloumns">
+      Confirmation
+    </h3>
+  </div>
 
-<h3>Shipping Information</h3>
+  <div class="row">
+    <div class="small-12 medium-6 columns">
+      <h4>Shipping Information</h4>
 
-<p>Shipped to:</p>
-<ul>
-  <li><%= @order.name_on_cc %></li>
-  <li><%= @order.address %></li>
-  <li>Confirmation Email sent to:<%= @order.email %> </li>
-</ul>
+      <p>Shipped to:</p>
+      <ul>
+        <li><%= @order.name_on_cc %></li>
+        <li><%= @order.address %></li>
+        <li>Confirmation Email sent to:<%= @order.email %> </li>
+      </ul>
+    </div>
+    <div class="small-12 medium-6 columns">
+      <h4>Order Details</h4>
+      <p>Order was placed at: <%=@order.updated_at %></p>
+      <p>Order status: <%=@order.status %></p>
+      <table>
+        <tr>
+          <th>Product Name</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Subtotal</th>
+        </tr>
+        <% @order.order_items.each do |order_item| %>
+        <tr>
+          <td><%= link_to order_item.product.name, product_path(order_item.product.id) %></td>
+          <td><%= order_item.product.price %></td>
+          <td><%= order_item.quantity %></td>
+          <td><%= order_item.subtotal %></td>
+        </tr>
+        <% end %>
+        </table>
+        <p>
+          <!-- This will update if product prices get updated, so do we need to hard save this data in the dB? -->
+            <strong>Your Total was: $<%= @order.total %></strong>
+        </p>
+    </div>
+  </div>
 
-<p>Order was placed at: <%=@order.updated_at %></p>
-<p>Order status: <%=@order.status %></p>
-<table>
-  <tr>
-    <th>Product Name</th>
-    <th>Price</th>
-    <th>Quantity</th>
-    <th>Subtotal</th>
-  </tr>
-  <% @order.order_items.each do |order_item| %>
-  <tr>
-    <td><%= link_to order_item.product.name, product_path(order_item.product.id) %></td>
-    <td><%= order_item.product.price %></td>
-    <td><%= order_item.quantity %></td>
-    <td><%= order_item.subtotal %></td>
-  </tr>
-  <% end %>
-</table>
-
-<p>
-  <!-- This will update if product prices get updated, so do we need to hard save this data in the dB? -->
-    <strong>Your Total was: $<%= @order.total %></strong>
-</p>
+</article>
