--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
   <ul class="row">
     <% @users.each do |user| %>
       <li class="small-12 medium-6 large-4 columns grid-item">
-        <div class="border">
+        <div class="user-border">
         <%= link_to(user_products_path(user.id)) do %>
           <%= user.username %> <br />
         <% end %>
