--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,11 @@
-<h1>Add a review</h1>
+<article class="checkout">
+  <div class="row">
+    <div class="small-12 medium-6 columns">
 
-<%= render partial: "form", locals: { action_name: "add review", form_method: :post } %>
+      <h1>Add a review</h1>
+
+      <%= render partial: "form", locals: { action_name: "add review", form_method: :post } %>
+
+    </div>
+  </div>
+</article>
