solved button_to issue for leaving a review

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -218,6 +218,10 @@ div.title {
   overflow: scroll;
 }
 
+.review-edit-button {
+  margin-top: 10px;
+}
+
 /*Cart Page*/
 .cart-items {
   margin: 10px 0;
