general styling done

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Add a Category Form</h1>
-<%= render partial: "form", locals: { action_name: "add category", form_method: :post } %>
+<article>
+  <div class="row">
+    <div class="small-12 medium-6 columns">
+      <h3>Add a Category Form</h3>
+      <%= render partial: "form", locals: { action_name: "add category", form_method: :post } %>
+    </div>
+  </div>
+</article>
