--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,3 +1,8 @@
-<h1>Edit product</h1>
-
-<%= render partial: "form", locals: { action_name: "update product", form_method: :put } %>
+<article>
+  <div class="row">
+    <div class="small-12 medium-6 columns">
+      <h3>Edit product</h3>
+      <%= render partial: "form", locals: { action_name: "update product", form_method: :put } %>
+    </div>
+  </div>
+</article>
