--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,5 +10,5 @@
     <%= f.label :profile %>
     <%= f.text_field :profile %>
 
-    <%= f.submit "Update profile" %>
+    <%= f.submit "Update profile", class: "button" %>
 <% end %>
