--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -31,6 +31,6 @@
   <%# f.label :user_id, "Merchant/user_id:" %>
   <%# f.text_field :user_id %>
 
-  <%= f.submit action_name %>
+  <%= f.submit action_name, class: "button" %>
 
 <% end %>
