--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -71,7 +71,7 @@
     </div>
     <div class="small-12 medium-4 columns review-edit-button">
       <% if can_edit? %>
-        <%= button_to "Edit this product", edit_product_path(@product.id), class: "button" %>
+        <%= button_to "Edit this product", edit_product_path(@product.id), class: "button", method: :get %>
       <% end %>
       <% if can_review? %>
         <%= button_to "Review this product", new_product_review_path(@product.id), class: "button", method: :get %>
