--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Profile</h1>
+<article>
+  <div class="row">
+    <div class="small-12 medium-6 columns">
+      <h1>Edit Profile</h1>
 
-<%= render partial: "form", locals: { action_name: "update user", form_method: :put } %>
+      <%= render partial: "form", locals: { action_name: "update user", form_method: :put } %>
+    </div>
+  </div>
+</article>
