Added similar styling for shop by user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <article class="index">
 
-  <div class = "row">
+  <div class = "row title">
     <h3 class="small-12 cloumns">Shop by Merchant</h3>
   </div>
 
