Added styling to new category form

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,5 +2,5 @@
     <%= f.label :name, "Category name" %>
     <%= f.text_field :name %>
 
-    <%= f.submit %>
+    <%= f.submit class: "button" %>
 <% end %>
