--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,7 +1,7 @@
 <article>
   <div class="row">
     <div class="small-12 medium-6 columns">
-      <h3>Add a Category Form</h3>
+      <h3>New Category</h3>
       <%= render partial: "form", locals: { action_name: "add category", form_method: :post } %>
     </div>
   </div>
