--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,9 @@
-<h1>Add New Product</h1>
+<article>
+  <div class="row">
+    <div class="small-12 medium-6 columns">
+      <h3>Add New Product</h3>
 
-<%= render partial: "form", locals: { action_name: "add product", form_method: :post } %>
+      <%= render partial: "form", locals: { action_name: "add product", form_method: :post } %>
+    </div>
+  </div>
+</article>
